# apc-mcp

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  index.js  license_decisions.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  publish.yml
.gitlab/merge_request_templates/: Default.md
templates/clap/: CMakeLists.txt
templates/clap/Source/: PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h
templates/juce/: CMakeLists.txt
templates/juce-webview/: CMakeLists.txt
templates/juce-webview/Source/: PluginProcessor.cpp  PluginProcessor.h  WebViewEditor.cpp  WebViewEditor.h
templates/juce-webview/Source/UI/: app.js  index.html  style.css
templates/juce/Source/: PluginProcessor.cpp  PluginProcessor.h
tests/: server.test.js
